# OpenStreetMap

./: CMakeLists.txt  LICENSE  README.md  main.cpp
graph/: GraphService.cpp  GraphService.h  graph.cpp  graph.h  knoten.h  queue.cpp  queue.h
rest/: APIController.cpp  APIController.h  CURLplusplus.h
xml/: Node.cpp  Node.h  Osm.cpp  Osm.h  Relation.cpp  Relation.h  Structs.h  Way.cpp  Way.h  XMLController.cpp  XMLController.h
